Bug 247364 - Sending emails without a recipient should not be possible
Summary: Sending emails without a recipient should not be possible
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-11 12:58 UTC by Sascha L. Teichmann
Modified: 2010-09-21 12:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sascha L. Teichmann 2010-08-11 12:58:53 UTC
An email needs at least a recipient.
Before entering a recipient it is pointless to let the user send the
a mail.

The "send" area should only appear if the user has enter at least
one recipient. It would be good if the application highlight/"glow"
the recipient flap if there is no recipient yet to inform the user
that some important is missing.

I consider this a major bug because the user can enter a lot
of email text, press send and loses a lot of his work because the
not yet fully setup mail is lost.
Comment 1 Artur Souza (MoRpHeUz) 2010-08-16 22:49:39 UTC
SVN commit 1164473 by asouza:

Check subject and recipients before sending the email

We should check and warn the user about unset subject and recipients
field and avoid sending the message before the user set that.

BUG:247364


 M  +16 -0     composerview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1164473
Comment 2 Sabine Faure 2010-08-18 21:09:56 UTC
It is corrected now.

When clicking on 'Send' a 'No recipient found - Kmail Mobile' pop up message appears saying:'You should specify at least one recipient for this message'.

After clicking on 'Ok' the pop up dialogue disappear and the user can go to the recipient tab to enter a recipient's name. The subject and text previously typed are still there.

N900 Packages, Svn Rev 1164728
Comment 3 Felix Wolfsteller 2010-09-01 11:12:41 UTC
Confirmed in 4:4.5~20100827.1168757-1maemo1.1169941 , closing.

Further improvements might involve:

1) Prompt for recipient if none was specified (similar for subject/content)
2) Use an effect like "glow" as proposed by Sascha
3) Disable Send Button as long as recipient missing
4) Make send button a "specify recipient" button as long as recipient is missing.
5) Remodel process such that recipient specification is first step in send-a-mail process.