Check subject and recipients before sending the email

We should check and warn the user about unset subject and recipients
field and avoid sending the message before the user set that.

BUG:247364

svn path=/trunk/KDE/kdepim/mobile/; revision=1164473